// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Standards test suites should render a grey line if there is no standard violation 1`] = `
.c0 {
  position: absolute;
  left: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 5px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 244px;
  z-index: 3;
  background-color: inherit;
}

<div
  className="c0"
>
  <div
    className="c1"
  />
</div>
`;

exports[`Standards test suites should render a red line if there is a standard violation 1`] = `
.c0 {
  position: absolute;
  left: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 5px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 244px;
  z-index: 3;
  background-color: red;
}

<div
  className="c0"
>
  <div
    className="c1"
  />
</div>
`;
